# ferric

./: CLAUDE.md  Cargo.toml  README.md  ferric.toml
src/: cache.rs  config.rs  fingerprint.rs  lib.rs  logger.rs  main.rs  main_commands_sorted.txt  metadata.rs  musicbrainz.rs  quality.rs  utils.rs
src/operations/: convert.rs  dedupe.rs  dedupe_libraries.rs  fix_metadata.rs  fix_metadata_mb.rs  fix_naming.rs  lowercase.rs  merge.rs  merge_libraries.rs  mod.rs  playlist.rs  sort.rs  tag_sort.rs  unified.rs
