[package]
name = "ferric"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance audio library organization tool"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Audio metadata extraction (pure Rust!)
symphonia = { version = "0.5", features = ["all"] }

# Parallelization
rayon = "1.10"

# Progress bars & UI
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
walkdir = "2"
fs_extra = "1.3"

# Logging
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

# For FFmpeg operations (conversion)
which = "6.0"

# Static variables
lazy_static = "1.4"
csv = "1.3"

# Fuzzy string matching
strsim = "0.11"

# Directory paths
dirs = "5.0"

# Base64 encoding for OPUS cover art
base64 = "0.22"

# Relative path computation for playlists
pathdiff = "0.2"

# Metadata cache database
rusqlite = { version = "0.32", features = ["bundled"] }

# MusicBrainz integration
musicbrainz_rs = "0.12"
rusty-chromaprint = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
